# OpenRisk

./: CMakeLists.txt  test.sh
examples/: market_crash_analysis.cpp
include/openrisk/core/: concepts.hpp  lbfgs.hpp  optimization.hpp  random.hpp  stats.hpp
include/openrisk/crash/: lppl.hpp
include/openrisk/dependence/: copula.hpp  correlation.hpp
include/openrisk/factor/: covariance.hpp
include/openrisk/tail/: var.hpp
include/openrisk/time_series/: garch.hpp
src/core/: optimization.cpp
src/crash/: lppl.cpp
src/factor/: attribution.hpp
src/time_series/: garch.cpp
